# enzyme-sdk-python

./: README.md  pyproject.toml
docs/: HOSTED_DESIGN.md  PIPELINE_SPEC.md  runbook-sdk.md
enzyme_sdk/: __init__.py  __main__.py  activity.py  body_clusters.py  client.py  collection.py  document.py  enzyme.py  hosted.py  server.py  store.py
examples/: agent_test.py  dishgen_app.py  insight_chain.py  nyt_es_data.json  nyt_sample_comments.json  nyt_user_data.json  prepare_nyt_data.py  run_mcp_server.py
tests/: test_body_clusters.py  test_client_embed_entries.py  test_client_ingest.py  test_connector_collections.py  test_e2e_decorators.py  test_hosted.py  test_hosted_scope.py
