[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enzyme-sdk"
version = "0.1.0"
description = "Python SDK wrapping the Enzyme CLI as a hosted service prototype"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
cluster = [
    "numpy>=1.24.0",
    "igraph>=0.11.0",
    "leidenalg>=0.10.0",
]
dev = [
    "httpx>=0.24.0",
    "pytest>=7.0.0",
]
examples = [
    "openai-agents",
]
